Bug 54858 - CRASH when accessing "General" tab of file "Properties" dialog ("File > Properties...") for any saved document
Summary: CRASH when accessing "General" tab of file "Properties" dialog ("File > Prope...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) macOS (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0
Keywords: regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-09-13 10:54 UTC by Roman Eisele
Modified: 2012-09-18 10:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Mac OS X 10.6.8 log for crash when accessing General tab of file Properties dialog (62.12 KB, text/plain)
2012-09-13 10:55 UTC, Roman Eisele
Details
crash log on linux 3.2.0-3-amd64 (43.81 KB, application/x-bzip2)
2012-09-14 00:09 UTC, Petr Vorel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Eisele 2012-09-13 10:54:52 UTC
If you try to access the “General” tab of the file “Properties” dialog for any Writer, Calc, or Impress file (except new and unsaved files), the current master builds crash on Mac OS X 10.6.8 (Intel).


How to reproduce:

Just start LOdev (3.7.0.0.alpha0+, Build ID: 2df0884, Pull time: 2012-09-11 01:28:39), open any existing Writer (.odt), Calc (.ods), or Impress (.odp) document, and select “File > Properties...” from the menu -- LOdev crashes either immeditaley or as soon as I select the “General” tab of the “Properties” dialog window.

If I create a new (empty) file with Writer, Calc, or Impress, the crash does NOT occur -- I can view and edit the file “Properties” dialog window, including
the “General” tab.

But if I save that new file as .odt/.ods/.odp file, and try “File > Properties...” again, LOdev either crashes immediately, or as soon as I select the “General” tab of the “Properties” dialog window. This happens even when the
document is still completely empty.


Bug history:

The same is already true with
* LOdev 3.7.0.0.alpha0+, Build ID: 5ca197c, Pull time: 2012-09-06 07:07:33,
  US English langpack installed.

The bug is not present in
* LibreOffice 3.6.1.2 (official Mac release build), German langpack installed
* LibreOffice 3.6.2.0+ (= 3.6 daily), Build ID: c303961, pull time:
  2012-09-11 08:49:57, German langpack installed
* LOdev 3.7.0alpha0+, Build ID: d0c3c24, Pull time: 2012-06-06 06:02:23
* LOdev 3.7.0.0.alpha0+, Build ID: 7727f93, Pull time: 2012-07-24 01:17:17
* LOdev 3.7.0.0.alpha0+, Build ID: 088915c, Pull time: 2012-08-01 01:07:11
* LOdev 3.7.0.0.alpha0+, Build ID: 9e04ae0, Pull time: 2012-08-21 00:09:17
* LOdev 3.7.0.0.alpha0+, Build ID: 4deb9d4, Pull time: 2012-08-31 04:36:39
  All with US English langpack installed

Therefore: -> regression in Master branch between 2012-08-31 and 2012-09-06.


Analysis:

The attached log file shows that the bug may involve Document Digital Signatures handling -- it seems that there is an unhandled (?) exception somewhere. Or this is a bug about exception handling?

In the Mac OS Console, on each crash of this type the following lines appear:

13.09.12 12:50:49
[0x0-0x1ea1ea].org.libreoffice.script[2696]
terminate called after throwing an instance of 'com::sun::star::uno::DeploymentException'

13.09.12 12:50:49
com.apple.launchd.peruser.502[2620]	([0x0-0x1ea1ea].org.libreoffice.script[2696])
Job appears to have crashed: Abort trap
Comment 1 Roman Eisele 2012-09-13 10:55:57 UTC
Created attachment 67097 [details]
Mac OS X 10.6.8 log for crash when accessing General tab of file Properties dialog
Comment 2 Roman Eisele 2012-09-13 11:05:43 UTC
@ Alex:
Sorry for throwing bugs at you ;-)
Here is a more important issue than the icons story -- it’s a crash in current master builds -- so, if you could please try to reproduce it (to do so should be very simple!), this would really help!

Thank you very much!
Comment 3 Roman Eisele 2012-09-13 11:07:58 UTC
@Rainer Bielefeld:
This is a new crash in the current master builds -- it would be very interesting to know if it is Mac OS only, or also reproducible on Windows -- could you please try to reproduce it? That should not need much time, it’s a simple one ...

Thank you very much!
Comment 4 Petr Vorel 2012-09-14 00:09:30 UTC
Created attachment 67126 [details]
crash log on linux 3.2.0-3-amd64

Hi there, 
I got crash just on startup. Running on linux 3.2.0-3-amd64 (current master 522b4c65dcc90719288b4f7aa7eb565c15b64e86). There is log from strace.
Comment 5 Roman Eisele 2012-09-14 06:10:37 UTC
(In reply to comment #4)
> I got crash just on startup.

Sorry, what do you mean by “crash just on startup” -- a crash of LibreOffice just when you start the application (then this is probably a different issue!), or a crash when you try to open the file “Properties” dialog via “File > Properties...”?
Comment 6 Roman Eisele 2012-09-14 08:36:55 UTC
@Petr Vorel:

Thank you for your comment! However, I got a question:

(In reply to comment #4)
> I got crash just on startup.

Sorry, what do you mean by “crash just on startup” -- a crash of LibreOffice
just when you start the application (then this is probably a different issue!),
or a crash when you try to open the file “Properties” dialog via “File >
Properties...”?


(Question repeated because Petr’s e-mail address was not in the CC field, so he might not have noticed my question.)
Comment 7 Petr Vorel 2012-09-14 08:42:08 UTC
(In reply to comment #6)
> Sorry, what do you mean by “crash just on startup” -- a crash of LibreOffice
> just when you start the application (then this is probably a different issue!),
> or a crash when you try to open the file “Properties” dialog via “File >
> Properties...”?
I wasn't sure if I should file new bug as it really crashes just during loading - when splash screen is shown, but the error report was the same. So shell I file new bug?
Comment 8 Roman Eisele 2012-09-14 08:49:04 UTC
@Petr Vorel:

(In reply to comment #7)
> > Sorry, what do you mean by “crash just on startup” -- a crash of LibreOffice
> > just when you start the application (then this is probably a different
> > issue!), or a crash when you try to open the file “Properties” dialog
> > via “File > Properties...”?
> I wasn't sure if I should file new bug as it really crashes just during loading
> - when splash screen is shown, but the error report was the same. So shell I
> file new bug?

Yes, please file a new bug report for this crash during loading!

Thank you very much!
Comment 9 Ivan Timofeev (retired) 2012-09-15 10:12:02 UTC
Confirmed on Linux and proposed a fix for review:
https://gerrit.libreoffice.org/628
Comment 10 Petr Vorel 2012-09-15 10:52:25 UTC
@Roman Eisele 
(In reply to comment #8)
> 
> Yes, please file a new bug report for this crash during loading!
Reported as #54962 (https://bugs.freedesktop.org/show_bug.cgi?id=54962).
Comment 11 Roman Eisele 2012-09-15 14:35:45 UTC
@Ivan Timofeev:

> Confirmed on Linux and proposed a fix for review:
> https://gerrit.libreoffice.org/628

Thank you very much for looking into this issue and providing a fix!
Comment 12 Not Assigned 2012-09-17 07:57:40 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9d265e1b693ccf2e6856ead3ca867fac36510726

fdo#54858: fix UNO service conversion



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Not Assigned 2012-09-17 10:05:47 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8b79f29a66b0528ad9ba2023930d3ba23915022

fdo#54858: DocumentDigitalSignatures::initialize can be called with 0 args now



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Ivan Timofeev (retired) 2012-09-17 17:25:14 UTC
(In reply to comment #11)
No doubt the real hero is Roman Eisele... ;) Such early reports are invaluable, many thanks for highlighting!
Comment 15 Roman Eisele 2012-09-18 10:07:40 UTC
VERIFIED FIXED with current master build (LOdev 3.7.0.0.alpha0+, Build ID: 01e6335, Pull time: 2012-09-18 04:23:03). Can access “General” tab again as before, no crashes.

Thank you again for fixing this so fast!


(In reply to comment #14)
> No doubt the real hero is Roman Eisele... ;) Such early reports are invaluable,
> many thanks for highlighting!

Oh, thanks, but this is too much honour for a simple bugwrangler ;-)