fdo#54858: fix UNO service conversion

regression from 197a79e57131c976a489882479a679ba2ab61b82

Change-Id: I3fbba4da0d293659d8521c768d34de18cd6bc634
Signed-off-by: Stephan Bergmann <sbergman@redhat.com>